manifests/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
  labels:
    app: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - image: omersafakbebek/k8s-demo
        name: sample-app
        ports:
        - containerPort: 8080
          name: app-port
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 250m
