manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  labels:
    app: sample
spec:
  ports:
    - port: 8080
  selector:
    app: sample
